--- a/css/adDetail.css
+++ b/css/adDetail.css
@@ -7,3 +7,7 @@
   transform: translateY(-5px);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
+
+.form-check-label:hover, .form-check-input:hover {
+  cursor: pointer;
+}
