--- a/css/adDetail.css
+++ b/css/adDetail.css
@@ -8,6 +8,6 @@
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
 
-.form-check-label:hover, .form-check-input:hover {
+/* .form-check-label:hover, .form-check-input:hover {
   cursor: pointer;
-}
+} */
